[package]
name = "metrics_evaluation"
version = "0.1.2"
edition = "2021"
authors = ["Dirk Faust <dirk@faustbande.de>"]
license = "MIT"
repository = "https://github.com/Dirk007/metrics_evaluation"
keywords = ["comparison", "pasrer", "metrics", "evaluation"]

[lib]
name = "metrics_evaluation"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.53"
chrono = "0.4.19"
humantime = "2.1.0"
nom = "7.1.0"
parse-hyperlinks = "0.23.3"
cfg-if = "1.0.0"

# Async-Deps
tokio = { version = "1.16.1", features = ["rt", "macros"], optional = true }
async-trait = { version = "0.1.52", optional = true }
async-recursion = { version = "1.0.0", optional = true }

[dev-dependencies]
tokio-test = { version = "0.4.2" }

[features]
default = []
async = ["tokio", "async-trait", "async-recursion"]
