[package]
name = "metrics_evaluation"
version = "0.2.0"
edition = "2021"
description = "Small foot-print parser and solver for (nested) text-based comparisons"
authors = ["Dirk Faust <dirk@faustbande.de>"]
license = "MIT"
repository = "https://github.com/Dirk007/metrics_evaluation"
keywords = ["comparison", "parser", "metrics", "evaluation"]

[lib]
name = "metrics_evaluation"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.66"
chrono = { version = "0.4.23", features = ["serde"] }
humantime = "2.1.0"
nom = "7.1.1"
parse-hyperlinks = "0.23.4"
cfg-if = "1.0.0"

# Async-Deps
tokio = { version = "1.22.0", features = ["rt", "macros"], optional = true }
async-trait = { version = "0.1.59", optional = true }
async-recursion = { version = "1.0.0", optional = true }

# Serde_de-Deps
serde = { version = "1.0.148", features = ["derive"],  optional = true }

[dev-dependencies]
tokio-test = { version = "0.4.2" }

[features]
default = []
# Enable async support
async = ["tokio", "async-trait", "async-recursion"]
# Enable serde deserialization of [Sequence] as well as Serialize + Deserialize for [Value]
serde_de = ["serde"]
# Enbale extra lax comparisons where some implicit conversions can take place
lax_comparison = []

[[example]]
name = "simple"
path = "examples/simple/src/main.rs"
